what we have by now, but the LULC still not working

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/* src/index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Estilos do Leaflet */
+.leaflet-container {
+  height: 100%;
+  width: 100%;
+}
